--- a/figures/Figure_4A/Oxphos_comparison_Neuron_type.Rmd
+++ b/figures/Figure_4A/Oxphos_comparison_Neuron_type.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "Emma Pan Neuro (Control + ND75KD)"
-description: "Figure 4B"
 author: "Vincent Gardeux"
 date: "2025/01/31"
 updated: "2025/02/12"
@@ -52,7 +51,7 @@ set.seed(42)
 
 ```{r}
 input_seurat_object <- "./data/Pan_neuro_integrated_FINAL.rds"
-output_figure_prefix <- "./figures/Figure_4B/"
+output_figure_prefix <- "./figures/Figure_4A/"
 ```
 
 ## I. Reading Seurat object
