Fix pySCENIC docker dependencies

--- a/preprocessing/S3c_Kellis_region_pySCENIC_pipeline.ipynb
+++ b/preprocessing/S3c_Kellis_region_pySCENIC_pipeline.ipynb
@@ -212,8 +212,8 @@
     "# import dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "#import anndata as ad\n",
-    "#import regdiffusion as rd # For replacing grnboost2 which is slow as hell and bugs (stalls) when there are more than ~1.5B elements in the matrix\n",
+    "import anndata as ad\n",
+    "import regdiffusion as rd # For replacing grnboost2 which is slow as hell and bugs (stalls) when there are more than ~1.5B elements in the matrix\n",
     "import ast # For reading frozenset as strings\n",
     "import pickle\n",
     "import pytz\n",
