--- a/preprocessing/S3d_Jeffries_HBAging_pySCENIC_pipeline.ipynb
+++ b/preprocessing/S3d_Jeffries_HBAging_pySCENIC_pipeline.ipynb
@@ -1620,7 +1620,7 @@
    "id": "23a8b86f-231f-41a6-a79c-9267bcaa27a7",
    "metadata": {},
    "source": [
-    "**Note:** I kept same parameters than when I ran pySCENIC on our own dataset. It produces 1618 regulons when using TF list from Aerts."
+    "**Note:** In the following code, I use `rho_mask_dropouts=True` for keeping the old R behaviour. It also produces slightly more regulons. "
    ]
   },
   {
@@ -1628,9 +1628,23 @@
    "execution_count": null,
    "id": "178d47d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/venv/lib/python3.10/site-packages/pyscenic/utils.py:305: FutureWarning: The behavior of .astype from SparseDtype to a non-sparse dtype is deprecated. In a future version, this will return a non-sparse array with the requested dtype. To retain the old behavior, use `obj.astype(SparseDtype(dtype))`\n",
+      "  ex_mtx = ex_mtx.T[~ex_mtx.columns.duplicated(keep=\"first\")].T.astype(float)\n",
+      "\n",
+      "2025-11-21 09:31:15,234 - pyscenic.utils - INFO - Calculating Pearson correlations.\n",
+      "\n",
+      "2025-11-21 09:31:17,447 - pyscenic.utils - WARNING - Note on correlation calculation: the default behaviour for calculating the correlations has changed after pySCENIC verion 0.9.16. Previously, the default was to calculate the correlation between a TF and target gene using only cells with non-zero expression values (mask_dropouts=True). The current default is now to use all cells to match the behavior of the R verision of SCENIC. The original settings can be retained by setting 'rho_mask_dropouts=True' in the modules_from_adjacencies function, or '--mask_dropouts' from the CLI.\n",
+      "\tDropout masking is currently set to [True].\n"
+     ]
+    }
+   ],
    "source": [
-    "modules = list(modules_from_adjacencies(adjacencies, ex_matrix.transpose(), rho_mask_dropouts=True, keep_only_activating=True)) # rho_mask_dropouts=True"
+    "modules = list(modules_from_adjacencies(adjacencies, ex_matrix.transpose(), rho_mask_dropouts=True, keep_only_activating=True))"
    ]
   },
   {
@@ -1665,6 +1679,21 @@
    "outputs": [],
    "source": [
     "print(modules_df.TF.nunique(), \"unique TF-modules were found ( out of\",len(tf_names),\"). Modules with less than 20 markers were filtered out.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cf8b0bf-d0c6-4ea4-b81e-e5e4242d54e7",
+   "metadata": {},
+   "source": [
+    "**Note:** In the following code, I use `filter_for_annotation=False` for deactivating the pruning/filtering and producing all possible regulons. This may not be the more conservative behaviour, so feel free to deactivate it with `filter_for_annotation=True` and then play with the filtering parameters: \n",
+    "- `weighted_recovery=False`\n",
+    "- `rank_threshold=1500`\n",
+    "- `nes_threshold=3`\n",
+    "- `motif_similarity_fdr=0.001`\n",
+    "- `auc_threshold=0.05`\n",
+    "\n",
+    "Of course, even if these parameters are set, they will have no impact on the result if `filter_for_annotation=False`"
    ]
   },
   {
@@ -1706,7 +1735,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Look for main regulons\n",
+    "# Look for main regulons I'm looking for\n",
     "print(\"ATF4\", \"ATF4\" in df.index.get_level_values('TF').values, sep=\"\\t\")"
    ]
   },
